@@ -9,6 +9,9 @@
 // $Id$
 //
 // $Log$
+// Revision 1.41  2007/12/14 17:48:52  rbowler
+// Enable SENSE ID CCW for 2703,3410,3420
+//
 // Revision 1.40  2007/11/21 22:54:14  fish
 // Use new BEGIN_DEVICE_CLASS_QUERY macro
 //
@@ -21,6 +24,10 @@
 #include "devtype.h"
 #include "parser.h"
 #include "commadpt.h"
+
+#if defined(__SOLARIS__) && defined(__SOLARIS10__)
+#define INADDR_NONE             0xffffffffU
+#endif
 
 #if defined(WIN32) && defined(OPTION_DYNAMIC_LOAD) && !defined(HDL_USE_LIBTOOL) && !defined(_MSVC_)
   SYSBLK *psysblk;
