@@ -863,6 +863,7 @@ maintainer)
 <li>Valery Pogonchenko
 <li><A HREF="http://upi.iki.fi/">Pasi Pirhonen</A>
 <li>Emerson Santos
+<li><a href="http://blogs.sun.com/jsavit/">Jeff Savit</a>
 <li><a href="http://pweb.uunet.de/schwarzer.d/">Axel Schwarzer</a>
 <li>Paul Scott
 <li>Daniel Seagraves
